test_programs/compile_failure/similarly_named_types/some_lib/src/lib.nr
pub struct Bar {}

pub fn foo(_: Bar) {}
